; ModuleID = '/home/carl/AnghaBench/esp-idf/components/mdns/test_afl_fuzz_host/extr_test.c_mdns_test_service_txt_set.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/mdns/test_afl_fuzz_host/extr_test.c_mdns_test_service_txt_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i32, i32*)* @mdns_test_service_txt_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mdns_test_service_txt_set(i8* %0, i8* %1, i32 %2, i32* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = load i32*, i32** %8, align 8
  %14 = load i32, i32* %7, align 4
  %15 = call i32 @mdns_service_txt_set(i8* %11, i8* %12, i32* %13, i32 %14)
  store i32 %15, i32* %9, align 4
  store i32* null, i32** %10, align 8
  %16 = call i32 @GetLastItem(i32** %10)
  %17 = load i32*, i32** %10, align 8
  %18 = call i32 @mdns_test_execute_action(i32* %17)
  %19 = load i32, i32* %9, align 4
  ret i32 %19
}

declare dso_local i32 @mdns_service_txt_set(i8*, i8*, i32*, i32) #1

declare dso_local i32 @GetLastItem(i32**) #1

declare dso_local i32 @mdns_test_execute_action(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
